# gifcap

./: .gitignore  .gitmodules  BingSiteAuth.xml  CNAME  Dockerfile  LICENSE  README.md  build.sh  gif.worker.js  index.html  main.css  main.js  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: build.yml
encoder/: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  configure  configure.ac  encoder.c  encoder.client.js  encoder.d.ts  encoder.js  encoder.wasm  encoder.worker.js  gifencoder.js  index.html  quantizer.js  worker.js  writer.js
encoder/test/: index.html  test.js
media/: browserconfig.xml  manifest.json
src/: app.ts  gifcap.d.ts  main.ts
src/components/: button.ts  onboarding.ts  timer.ts  view.ts
src/views/: play.ts  preview.ts  record.ts  render.ts  start.ts
test/: index.html  main.js
